# iatool

./: .gitignore  README.md  pyproject.toml
iatool/core/: asset.py  cache.py  config.py  data.py  error.py  screen.py  search.py  util.py
iatool/data/: fmp.py
tests/manual/cache/: test_cache.py
tests/manual/config/: test_config.py
tests/manual/data/: test_balance_sheet_data.py  test_cash_flow_data.py  test_company_profile_data.py  test_fetch_data.py  test_income_statement_data.py
tests/manual/tools/: test_screen.py
