[tool.poetry]
name = "iatool"
version = "0.1.0"
description = "A quantitative investment analysis tool."
authors = ["mmrakib <mayaz@rakib.com.au>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mmrakib/iatool"
homepage = "https://mayazrakib.com/projects/iatool"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
aiohttp = "^3.11.8"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
